tests/snapshots/keys_interactive__keys_interactive_tab-2.snap
---
source: tests/keys_interactive.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  4                                                                             "
"  3                                                                             "
"> 2                                                                             "
"  1                                                                             "
"  4/4                                                                        1/0"
"c>                                                                              "
cursor: (3, 23)
