tests/snapshots/keys_interactive__keys_interactive_tab@001.snap
---
source: tests/keys_interactive.rs
description: "input: items [\"1\", \"2\", \"3\", \"4\"]\noptions: -i"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  4                                                                             "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  4/4                                                                        0/0"
"c>                                                                              "
cursor: (24, 4)
