tests/snapshots/keys_interactive__keys_interactive_tab@002.snap
---
source: tests/keys_interactive.rs
description: "input: items [\"1\", \"2\", \"3\", \"4\"]\noptions: -i\nafter:\n  @ctrl 'k'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  4                                                                             "
"  3                                                                             "
"> 2                                                                             "
"  1                                                                             "
"  4/4                                                                        1/0"
"c>                                                                              "
cursor: (24, 4)
